--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE HTML>
 <HTML>
 <HEAD>
-  <TITLE>ここにタイトルを入力</TITLE>
+  <TITLE>Sudip</TITLE>
   <META CHARSET="UTF-8">
 </HEAD>
 <BODY>
-  <H1>はじめてのHTML入門</H1>
-  <P>HTMLの書き方について学ぼう</P>
+  <H1>Website comming soon...........</H1>
 </BODY>
 </HTML>
