--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <title>Sudip</title>
   </head>
   <body>
+    <h1>We are comming soon..........</h1>
+    <!--
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Navbar</a>
@@ -46,7 +48,7 @@
       </form>
     </div>
   </div>
-</nav>
+</nav>-->
 
     <!-- Optional JavaScript; choose one of the two! -->
 
