--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Sudip</title>
   </head>
   <body>
-    <h1>We are comming soon..........</h1>
+    <h1 class="container">We are comming soon..........</h1>
     <!--
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
