--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     <h1 class="container">We are comming soon..........</h1>
+    <img src="img/photo.jpg" class="object-fit-none border rounded" alt="...">
     <!--
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
