--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 
 </main>
-
+    <img src="/img/photo.jpg" class="img-fluid" alt="...">
 
     <script src="bootstrap.bundle.min.js"></script>
 
