--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <div class="container">
     <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
       <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-blue text-decoration-none">
-      <img class="bi me-2" width="40" height="32" src="ab.jpg"/>
+      <img class="bi me-2" width="40" height="32" src="img/ab.jpg"/>
         <span class="fs-4">Sudip Lamsal</span>
       </a>
 
