--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
       <ul class="nav nav-pills">
         <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">about</a></li>
+        <li class="nav-item"><a href="sample.html" class="nav-link">about</a></li>
         <li class="nav-item"><a href="#" class="nav-link">photo</a></li>
         <li class="nav-item"><a href="#" class="nav-link">feedback</a></li>
       </ul>
