--- a/sample.html
+++ b/sample.html
@@ -67,7 +67,7 @@
   <div class="container">
     <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
       <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-black text-decoration-none">
-        <img class="bi me-2" width="50" height="50" src="sudip.jpg"/>
+        <img class="bi me-2" width="50" height="50" src="img/sudip.jpg"/>
         <span class="fs-4">sample sample</span>
       </a>
 
