--- a/sample.html
+++ b/sample.html
@@ -82,12 +82,13 @@
 
 
 </main>
-    <h1>please wait</h1>
+    <a href="#" onlclick="return sudip()">please wait</a>
 
 
     <script src="bootstrap.bundle.min.js"></script>
     <script>
       function sudip(){
+        alert("只今メンテナンス中です")
         
       }
     </script>
