--- a/sample.html
+++ b/sample.html
@@ -82,7 +82,7 @@
 
 
 </main>
-    <a href="#" onlclick="return sudip()">please wait</a>
+    <button type="button" onclick="return sudip()">押下してください</button>
 
 
     <script src="bootstrap.bundle.min.js"></script>
