--- a/sample.html
+++ b/sample.html
@@ -29,6 +29,10 @@
           font-size: 3.5rem;
         }
       }
+      button {
+        font-size: 1.125rem;
+        color:red;
+      }
     </style>
 
     
