--- a/sample.html
+++ b/sample.html
@@ -30,8 +30,14 @@
         }
       }
       button {
-        font-size: 1.125rem;
-        color:red;
+        background-color: #4CAF50; 
+        border: none;
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
       }
     </style>
 
