--- a/sample.html
+++ b/sample.html
@@ -92,7 +92,7 @@
 
 
 </main>
-    <button type="button" onclick="return sudip()">押下してください</button>
+    <button type="button" onclick="return sudip()">只今メンテナンス中です</button>
 
 
     <script src="bootstrap.bundle.min.js"></script>
